bridge/base/scanner-expose.yaml
#! scanner-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: scanner
    namespace: api-auth-scanner
    labels:
        com.docker.compose.project: api-auth-scanner
        com.docker.compose.service: scanner
spec:
    selector:
        com.docker.compose.project: api-auth-scanner
        com.docker.compose.service: scanner
    ports:
        - name: scanner-8000
          port: 8000
          targetPort: scanner-8000
