bridge/base/scanner-net-network-policy.yaml
#! scanner-net-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: scanner-net-network-policy
    namespace: api-auth-scanner
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.scanner-net: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.scanner-net: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.scanner-net: "true"
